# langchain

./: .gitignore  AGENTS.md  README.md  flake.nix
examples/: codex_cargo_fix_loop.py  codex_feature_orchestration.py  codex_project_structuring.py  codex_provider_runtime_doc.py  codex_simple_invoke.py  pyproject.toml  pyrightconfig.json
libs/langchain/tests/unit_tests/_api/: test_root_imports.py
libs/langchain_v1/: pyproject.toml
libs/langchain_v1/langchain/chat_models/: base.py
libs/langchain_v1/tests/unit_tests/chat_models/: test_chat_models.py
libs/partners/codex/: README.md  pyproject.toml  pyrightconfig.json
libs/partners/codex/docs/superpowers/plans/: 2026-04-07-langchain-codex-refactor-plan.md  2026-04-09-codex-provider-implementation-plan.md
libs/partners/codex/docs/superpowers/specs/: 2026-04-06-chatcodex-command-design.md  2026-04-09-codex-provider-design.md
libs/partners/codex/langchain_codex/: __init__.py  _types.py  chat_models.py  client.py  errors.py  observers.py  session.py  transport.py  types.py
libs/partners/codex/langchain_codex/protocol/: __init__.py  base.py  events.py  items.py  requests.py
libs/partners/codex/langchain_codex/transport/: __init__.py  base.py  stdio.py
libs/partners/codex/tests/: __init__.py
libs/partners/codex/tests/unit_tests/: __init__.py  test_chat_models.py  test_client.py  test_examples.py  test_filesystem.py  test_imports.py  test_protocol_events.py  test_protocol_items.py  test_protocol_requests.py  test_realtime.py  test_server_requests.py  test_session.py  test_transport.py  test_types.py
libs/text-splitters/tests/unit_tests/: test_text_splitters_character.py  test_text_splitters_code.py  test_text_splitters_html.py  test_text_splitters_html_semantic.py  test_text_splitters_json.py  test_text_splitters_markdown.py  test_text_splitters_tokens.py
