[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-codex"
description = "An integration package connecting Codex and LangChain"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
version = "0.1.0"
requires-python = ">=3.10.0,<4.0.0"
dependencies = [
    "langchain-core>=1.2.23,<2.0.0",
]

[project.urls]
Homepage = "https://docs.langchain.com/oss/python/integrations/providers/codex"
Documentation = "https://reference.langchain.com/python/integrations/langchain_codex/"
Repository = "https://github.com/langchain-ai/langchain"
Issues = "https://github.com/langchain-ai/langchain/issues"
Changelog = "https://github.com/langchain-ai/langchain/releases?q=%22langchain-codex%22"
Twitter = "https://x.com/LangChain"
Slack = "https://www.langchain.com/join-community"
Reddit = "https://www.reddit.com/r/LangChain/"

[dependency-groups]
test = [
    "pytest>=7.3.0,<8.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "pytest-socket>=0.7.0,<1.0.0",
    "pytest-watcher>=0.3.4,<1.0.0",
    "langchain-core",
    "langchain-tests",
]
test_integration = []
lint = ["ruff>=0.13.1,<0.14.0"]
dev = []
typing = ["mypy>=1.10.0,<2.0.0"]

[tool.uv]
constraint-dependencies = ["pygments>=2.20.0"]

[tool.uv.sources]
langchain-core = { path = "../../core", editable = true }
langchain-tests = { path = "../../standard-tests", editable = true }

[tool.mypy]
disallow_untyped_defs = "True"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "COM812",  # Conflicts with formatter
    "ANN401",  # Allow Any annotations in scaffolding code
    "TC002",   # Import cycles are not relevant for the scaffold
    "TC003",   # Import cycles are not relevant for the scaffold
]
unfixable = ["B028"] # People should intentionally tune the stacklevel

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "requires: mark tests as requiring a specific library",
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Tests need assertions
    "S311",   # Standard pseudo-random generators are not suitable for cryptographic purposes
    "SLF001", # Private member access
]
"scripts/*.py" = [
    "INP001",   # Not a package
]
