[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-codex"
version = "0.1.0"
requires-python = ">=3.10.0,<4.0.0"
dependencies = [
    "langchain-core>=1.2.23,<2.0.0",
]

[dependency-groups]
test = ["pytest>=7.3.0,<8.0.0"]

[tool.uv.sources]
langchain-core = { path = "../../core", editable = true }
